--- a/client/src/map.css
+++ b/client/src/map.css
@@ -16,6 +16,7 @@
     border: 2px solid #D3D3D3;                  /* 테두리 색상 */
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);     /* 그림자 */
 }
+/* 마커 색깔 파스텔 */
 .marker-children-park {
     background-color: #FFD1DC;
 }
@@ -40,3 +41,28 @@
 .marker-cemetery-park {
     background-color: #CFCFC4;
 }
+/* 마커 색깔 선명 */
+/* .marker-children-park {
+    background-color: #FF69B4;
+}
+.marker-neighborhood-park {
+    background-color: #1E90FF;
+}
+.marker-small-park {
+    background-color: #FFD700;
+}
+.marker-cultural-park {
+    background-color: #8A2BE2;
+}
+.marker-waterfront-park {
+    background-color: #32CD32;
+}
+.marker-sports-park {
+    background-color: #FF8C00;
+}
+.marker-historical-park {
+    background-color: #20B2AA;
+}
+.marker-cemetery-park {
+    background-color: #B39EB5;
+} */
