--- a/client/src/menu.css
+++ b/client/src/menu.css
@@ -5,7 +5,7 @@
   width: 390px;
   height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   background-color: white;      /* 연한 회색 배경 */
   color: #000;                  /* 검은색 텍스트 */
   transition: transform 0.3s ease;
@@ -23,13 +23,19 @@
   background-color: white;       /* 중간 회색 배경 */
   color: #9C27B0;
   border: 1px solid #9C27B0;
-  border-left: none; /* 왼쪽 테두리 제거 */
+  border-left: none;               /* 왼쪽 테두리 제거 */
   cursor: pointer;
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 5px;
   padding-right: 8px;
   border-radius: 0 8px 8px 0;
+}
+
+.gray-line {
+  border: none;
+  border-top: 5px solid #f0f0f3;
+  margin: 1px;                    /* 위아래 여백 */
 }
 
 .search_box {
@@ -85,4 +91,36 @@
   left: 20px;
   transform: translateY(-50%) rotate(45deg);
   transform-origin: left center;
+}
+
+.facilities_box {
+  width: 390px;
+  flex-wrap: wrap; 
+  display: flex;
+  justify-content: center;          /* 수평 중앙 정렬 */
+}
+.facilities_bnt {
+  width: 50px;
+  height: 50px;
+  margin-left: 5px;
+  margin-right: 5px;
+  border-radius: 50%;
+  border: 2px solid #9C27B0; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  background-color: white;
+}
+.facilities_bnt:hover{
+  background-color: #f0f0f3;
+}
+.facilities_text {
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
 }
