프로젝트 구조 개선 중_240901

--- a/client/src/menu.css
+++ b/client/src/menu.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 390px;
-  height: 100%;
+  height: calc(100vh - 16px);
   display: flex;
   flex-direction: column;
   background-color: white;      /* 연한 회색 배경 */
